src/test/ui/error-codes/E0198.stderr
error[E0198]: negative impls cannot be unsafe
  --> $DIR/E0198.rs:5:1
   |
LL | unsafe impl !Send for Foo { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0198`.
